# krypto

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  coverage.xml  package-lock.json  pyproject.toml  sonar-project.properties
.github/workflows/: code-quality.yml
apps/web/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/frontend/src/: App.tsx  i18n.tsx  main.tsx
apps/web/frontend/src/config/: Footer.tsx  Header.tsx  Sidebar.tsx
apps/web/frontend/src/data/: primitivesData.ts
apps/web/frontend/src/hooks/: useLanguage.tsx  useLocalStorage.ts  (+2 more)
benchmarks/: benchmark.py  benchmark_asymmetric.py  benchmark_prng.py  benchmark_symmetric.py
krypto_lib/: utils.py
krypto_lib/asymmetric/factorization/: rsa.py
krypto_lib/prng/: gps_l1_ca.py  prga.py
krypto_lib/symmetric/: arc4.py  chacha20.py  vigenere.py
krypto_lib/symmetric/block/: aes.py
krypto_lib/symmetric/classical/: vigenere.py
krypto_lib/symmetric/stream/: arc4.py  chacha20.py
src/krypto_lib/: utils.py
src/krypto_lib/asymmetric/discrete_logarithm/: diffie_hellman.py  elgamal.py
src/krypto_lib/asymmetric/elliptic_curve/: __init__.py  ecc.py  ecdh.py  eceg.py
src/krypto_lib/asymmetric/factorization/: rsa.py
src/krypto_lib/symmetric/block/: aes.py
src/krypto_lib/symmetric/stream/: __init__.py  arc4.py  chacha20.py
tests/: test_aes.py  test_arc4.py  test_chacha20.py  test_diffie_hellman.py  test_ecc.py  test_ecdh.py  test_eceg.py  test_elgamal.py  test_gps_l1_ca.py  test_rsa.py  test_utils.py  test_vigenere.py
(+69 files in other folders)
